[package]
authors = ["dyslexicsteak <49301588+dyslexicsteak@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ihsanled"
version = "0.1.0"

[[bin]]
bench = false
name = "ihsanled"
test = false

[dependencies]
nb = "1.1.0"
panic-halt = "0.2.0"
ufmt = "0.2.0"
# embedded-hal = "1.0"
avr-device = "0.5.4"

    [dependencies.arduino-hal]
    features = ["arduino-uno", "rt"]
    git = "https://github.com/rahix/avr-hal"
    rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
